Micro optimisation des instanciations